--- a/ballerina cakes-main/shopspage.html
+++ b/ballerina cakes-main/shopspage.html
@@ -87,14 +87,14 @@ ul.breadcrumb li a:hover {
         <body>
             <h1><i>Shops</i></h1>
             <ul class="breadcrumb">
-              <li><a href="file:///C:/Users/yachi/Downloads/htmlwave.html">Home</a></li>
+              <li><a href="ballerina-cakes-main/htmlwave.html">Home</a></li>
               <li><a href="#">Shop</a></li>
             </ul>
             <br><br><br><br>
             <div class="responsive">
                 <div class="gallery">
-                  <a target="_blank" href="C:\Users\yachi\OneDrive\Pictures\cakeshop images\1-2.jpg">
-                    <img src="C:\Users\yachi\OneDrive\Pictures\cakeshop images\1-2.jpg" alt="Cinque Terre" width="600" height="600">
+                  <a target="_blank" href="ballerina-cakes-main\cakeshop images\1-2.jpg">
+                    <img src="ballerina-cakes-main\cakeshop images\1-2.jpg" alt="Cinque Terre" width="600" height="600">
                   </a>
                   <div class="desc"><i>Authentic Macaroons</i></div>
                 </div>
@@ -102,8 +102,8 @@ ul.breadcrumb li a:hover {
 
               <div class="responsive">
                 <div class="gallery">
-                  <a target="_blank" href="C:\Users\yachi\OneDrive\Pictures\cakeshop images\10.jpg">
-                    <img src="C:\Users\yachi\OneDrive\Pictures\cakeshop images\10.jpg" alt="Cinque Terre" width="600" height="600">
+                  <a target="_blank" href="ballerina-cakes-main\cakeshop images\10.jpg">
+                    <img src="ballerina-cakes-main\cakeshop images\10.jpg" alt="Cinque Terre" width="600" height="600">
                   </a>
                   <div class="desc"><i>Birthday Cake</i></div>
                 </div>
@@ -111,8 +111,8 @@ ul.breadcrumb li a:hover {
 
               <div class="responsive">
                 <div class="gallery">
-                  <a target="_blank" href="C:\Users\yachi\OneDrive\Pictures\cakeshop images\5.jpg">
-                    <img src="C:\Users\yachi\OneDrive\Pictures\cakeshop images\5.jpg" alt="Cinque Terre" width="600" height="600">
+                  <a target="_blank" href="ballerina-cakes-main\cakeshop images\5.jpg">
+                    <img src="ballerina-cakes-main\cakeshop images\5.jpg" alt="Cinque Terre" width="600" height="600">
                   </a>
                   <div class="desc"><i>Candy Lollipop</i></div>
                 </div>
@@ -120,8 +120,8 @@ ul.breadcrumb li a:hover {
 
               <div class="responsive">
                 <div class="gallery">
-                  <a target="_blank" href="C:\Users\yachi\OneDrive\Pictures\cakeshop images\4.jpg">
-                    <img src="C:\Users\yachi\OneDrive\Pictures\cakeshop images\4.jpg" alt="Cinque Terre" width="600" height="600">
+                  <a target="_blank" href="ballerina-cakes-main\cakeshop images\4.jpg">
+                    <img src="ballerina-cakes-main\cakeshop images\4.jpg" alt="Cinque Terre" width="600" height="600">
                   </a>
                   <div class="desc"><i>Classic Macaroon</i></div>
                 </div>
@@ -129,8 +129,8 @@ ul.breadcrumb li a:hover {
 
               <div class="responsive">
                 <div class="gallery">
-                  <a target="_blank" href="C:\Users\yachi\OneDrive\Pictures\cakeshop images\1-5.jpg">
-                    <img src="C:\Users\yachi\OneDrive\Pictures\cakeshop images\1-5.jpg" alt="Cinque Terre" width="600" height="600">
+                  <a target="_blank" href="ballerina-cakes-main\cakeshop images\1-5.jpg">
+                    <img src="ballerina-cakes-main\cakeshop images\1-5.jpg" alt="Cinque Terre" width="600" height="600">
                   </a>
                   <div class="desc"><i>Coffee Cake</i></div>
                 </div>
@@ -138,8 +138,8 @@ ul.breadcrumb li a:hover {
 
               <div class="responsive">
                 <div class="gallery">
-                  <a target="_blank" href="C:\Users\yachi\OneDrive\Pictures\cakeshop images\3.jpg">
-                    <img src="C:\Users\yachi\OneDrive\Pictures\cakeshop images\3.jpg" alt="Cinque Terre" width="600" height="600">
+                  <a target="_blank" href="ballerina-cakes-main\cakeshop images\3.jpg">
+                    <img src="ballerina-cakes-main\cakeshop images\3.jpg" alt="Cinque Terre" width="600" height="600">
                   </a>
                   <div class="desc"><i>French Macaroon</i></div>
                 </div>
@@ -147,8 +147,8 @@ ul.breadcrumb li a:hover {
 
               <div class="responsive">
                 <div class="gallery">
-                  <a target="_blank" href="C:\Users\yachi\OneDrive\Pictures\cakeshop images\6.jpg">
-                    <img src="C:\Users\yachi\OneDrive\Pictures\cakeshop images\6.jpg" alt="Cinque Terre" width="600" height="600">
+                  <a target="_blank" href="ballerina-cakes-main\cakeshop images\6.jpg">
+                    <img src="ballerina-cakes-main\cakeshop images\6.jpg" alt="Cinque Terre" width="600" height="600">
                   </a>
                   <div class="desc"><i>Happy Ninja</i></div>
                 </div>
@@ -156,8 +156,8 @@ ul.breadcrumb li a:hover {
 
               <div class="responsive">
                 <div class="gallery">
-                  <a target="_blank" href="C:\Users\yachi\OneDrive\Pictures\cakeshop images\7.jpg">
-                    <img src="C:\Users\yachi\OneDrive\Pictures\cakeshop images\7.jpg" alt="Cinque Terre" width="600" height="600">
+                  <a target="_blank" href="ballerina-cakes-main\cakeshop images\7.jpg">
+                    <img src="ballerina-cakes-main\cakeshop images\7.jpg" alt="Cinque Terre" width="600" height="600">
                   </a>
                   <div class="desc"><i>Hearts Lollipop</i></div>
                 </div>
@@ -165,8 +165,8 @@ ul.breadcrumb li a:hover {
 
               <div class="responsive">
                 <div class="gallery">
-                  <a target="_blank" href="C:\Users\yachi\OneDrive\Pictures\cakeshop images\9.jpg">
-                    <img src="C:\Users\yachi\OneDrive\Pictures\cakeshop images\9.jpg" alt="Cinque Terre" width="600" height="600">
+                  <a target="_blank" href="ballerina-cakes-main\cakeshop images\9.jpg">
+                    <img src="ballerina-cakes-main\cakeshop images\9.jpg" alt="Cinque Terre" width="600" height="600">
                   </a>
                   <div class="desc"><i>Lemon Lollipops</i></div>
                 </div>
@@ -174,8 +174,8 @@ ul.breadcrumb li a:hover {
 
               <div class="responsive">
                 <div class="gallery">
-                  <a target="_blank" href="C:\Users\yachi\OneDrive\Pictures\cakeshop images\11.jpg">
-                    <img src="C:\Users\yachi\OneDrive\Pictures\cakeshop images\11.jpg" alt="Cinque Terre" width="600" height="600">
+                  <a target="_blank" href="ballerina-cakes-main\cakeshop images\11.jpg">
+                    <img src="ballerina-cakes-main\cakeshop images\11.jpg" alt="Cinque Terre" width="600" height="600">
                   </a>
                   <div class="desc"><i>Limo Lollipops</i></div>
                 </div>
@@ -183,8 +183,8 @@ ul.breadcrumb li a:hover {
 
               <div class="responsive">
                 <div class="gallery">
-                  <a target="_blank" href="C:\Users\yachi\OneDrive\Pictures\cakeshop images\2.jpg">
-                    <img src="C:\Users\yachi\OneDrive\Pictures\cakeshop images\2.jpg" alt="Cinque Terre" width="600" height="600">
+                  <a target="_blank" href="ballerina-cakes-main\cakeshop images\2.jpg">
+                    <img src="ballerina-cakes-main\cakeshop images\2.jpg" alt="Cinque Terre" width="600" height="600">
                   </a>
                   <div class="desc"><i>Premuim Lollipops</i></div>
                 </div>
@@ -192,8 +192,8 @@ ul.breadcrumb li a:hover {
 
               <div class="responsive">
                 <div class="gallery">
-                  <a target="_blank" href="C:\Users\yachi\OneDrive\Pictures\cakeshop images\1.jpg">
-                    <img src="C:\Users\yachi\OneDrive\Pictures\cakeshop images\1.jpg" alt="Cinque Terre" width="600" height="600">
+                  <a target="_blank" href="ballerina-cakes-main\cakeshop images\1.jpg">
+                    <img src="ballerina-cakes-main\cakeshop images\1.jpg" alt="Cinque Terre" width="600" height="600">
                   </a>
                   <div class="desc"><i>Yami Macaroons</i></div>
                 </div>
